# muldex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-build.yml
crates/muldex-cli/: Cargo.toml
crates/muldex-cli/src/: main.rs
crates/muldex-cli/src/interactive_tui/: frames.rs  keymap.rs  layout.rs  markdown_render.rs  mod.rs  notifications.rs  overlay.rs  render.rs  terminal.rs  terminal_non_windows.rs  terminal_palette.rs  theme.rs  view_model.rs  win32_input.rs  win32_input_non_windows.rs  wincon_backend.rs
crates/muldex-cli/tests/: cli_smoke.rs  e2e_router.rs  repro_tty.rs
crates/muldex-core/: Cargo.toml
crates/muldex-core/src/: agently.rs  lib.rs  orchestrator.rs  policy.rs  protocol.rs  provider.rs  reasoning_harness.rs  upstream_adapter.rs
crates/muldex-runtime/: Cargo.toml
crates/muldex-runtime/src/: client_policy.rs  client_views.rs  compression.rs  continuity.rs  daemon.rs  daemon_local.rs  daemon_transport.rs  host.rs  interactive_turn.rs  lib.rs  openai_provider.rs  react_loop.rs  responses_provider.rs  runtime.rs  ui_events.rs
docs/: README.md  acceptance-criteria.md  agently-integration-options.md  architecture-boundary.md  capability-audit.md  claude-code-comparison.md  client-contract-v1.md  codex-parity-react-gap-plan.md  codex-parity-react-gap-todo.md  codex-tui-compatibility-matrix.md  current-baseline.md  data-structures.md  implementation-plan.md  installing-muldex-cli.md  interactive-shell-guide.md  interactive-shell-release-checklist.md  interactive-shell-trial-handoff.md  interactive-shell-validation.md  jcode-comparison.md  local-release-runbook.md  problem-statement.md  real-env-testing.md  release-build-strategy.md  release-dry-run-plan.md  responses-api-migration-plan.md  responses-api-migration-todo.md  runtime-gap-analysis.md  todo.md  tui-codex-demo-plan.md  tui-codex-demo-todo.md  tui-parity-lessons.md  windows-terminal-performance.md  workstreams.md
docs/adr/: ADR-0001-rust-first-kernel-authority.md  ADR-0002-runtime-layering-and-session-host.md  ADR-0003-normalized-runtime-command-boundary.md  ADR-0004-external-agent-runtime-sidecar-seam.md  ADR-0005-multimodal-context-bounded-derived-artifacts.md  ADR-0006-file-backed-runtime-host-persistence.md  ADR-0007-long-running-runtime-daemon-model.md  ADR-0008-resume-import-export-contract.md  ADR-0009-local-daemon-ownership-and-command-transport.md  ADR-0010-harness-safe-context-compression-and-retention.md  ADR-0011-daemon-lease-heartbeat-and-stale-owner-recovery.md  ADR-0012-server-client-runtime-architecture.md  ADR-0013-default-interactive-shell-and-codex-migration-surface.md  README.md  (+2 more)
examples/: codex-bootstrap-snapshot.json  codex-live-snapshot.json  codex-snapshot.json  no-progress.json  recoverable-failure.json
scripts/: install-muldex-linux.sh  install-muldex-windows.ps1  package-release-unix.sh  package-release-windows.ps1  prepare-interactive-shell-trial.ps1  uninstall-muldex-linux.sh  uninstall-muldex-windows.ps1  validate-interactive-shell.ps1  verify-release-artifact.ps1  verify-release-artifact.py
