[package]
name = "muldex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "muldex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
muldex-core = { path = "../muldex-core" }
muldex-runtime = { path = "../muldex-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
pulldown-cmark = { version = "0.12", default-features = false }
syntect = "5"
arboard = "3"
dirs = "5"
toml = "0.8"
notify = "6"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Security"] }

[dev-dependencies]
portable-pty = "0.9"
