[package]
name = "muldex-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "muldex_core"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
